--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,6 @@ google-genai==0.3.0
 pandas==2.2.1
 plotly==5.20.0
 python-docx==1.1.0
-google-api-python-client
-gspread
+gspread==6.0.0
+google-api-python-client==2.118.0
+oauth2client==4.1.3
