--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,4 @@ pandas==2.2.1
 plotly==5.20.0
 python-docx==1.1.0
 gspread==6.0.0
-google-api-python-client==2.118.0
-oauth2client==4.1.3
+google-cloud-storage==2.14.0
